# GPGPU-with-GLES

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  benchmark.c  computations.c  computations.h
cmake/: FindOpenGLES2.cmake
docs/: _config.yml  index.md
examples/: CMakeLists.txt
examples/array_add_fixed16/: CMakeLists.txt  array_add_fixed16.c
examples/array_add_float/: CMakeLists.txt
examples/chain_conv2d_float/: CMakeLists.txt  chain_conv2d_float.c
examples/chain_simple_float/: CMakeLists.txt
examples/fir_conv_float/: CMakeLists.txt
examples/mult_mat_float/: CMakeLists.txt  mult_mat_float.c
examples/mult_mat_int/: CMakeLists.txt  mult_mat_int.c
examples/testing/: fixed_test  fixed_test.c
host/: CMakeLists.txt
host/src/: main.cpp
include/: defines.h  gbm.h  gpgpu_gles.h
lib/: CMakeLists.txt
lib/benchmarks/: CMakeLists.txt  benchmark.c  computations.c  computations.h
lib/benchmarks/first/: CMakeLists.txt  benchmark.c  benchmark1.c  computations.c  computations.h
lib/cmake/: FindEGL.cmake  FindOpenGLES2.cmake  GPGPU_GLESConfig.cmake.in
lib/cmake/modules/: FindGLES2.cmake  FindGPGPU_GLES.cmake
lib/examples/: CMakeLists.txt
lib/examples/array_add_fixed16/: CMakeLists.txt  array_add_fixed16.c
lib/examples/array_add_fixed16_argb8888/: CMakeLists.txt  array_add_fixed16_argb8888.c
lib/examples/array_add_fixed16_rgb565/: CMakeLists.txt  array_add_fixed16_rgb565.c
lib/examples/array_add_float/: CMakeLists.txt  array_add_float.c
lib/examples/basic/: CMakeLists.txt  basic.c
lib/examples/chain_conv2d_float/: CMakeLists.txt
lib/examples/chain_simple_float/: chain_simple_float.c
lib/examples/fir_conv_float/: CMakeLists.txt  fir_conv_float.c
lib/examples/testing/: conv_test  conv_test.c
lib/include/: defines.h  gpgpu_gles.h
lib/shaders/: array_add_fixed16.fs  array_add_fixed16_rgb565.fs  chain_add_scalar_float.fs  chain_divide_array_float.fs  chain_divide_scalar_float.fs  chain_multiply_scalar_float.fs  fir_conv2d_float_bbb_5.fs  fir_conv_float.fs  fir_conv_float_bbb.fs
lib/src/: debug.c  gpgpu_gles.c  gpgpu_int.c
lib/src/include/: debug.h  gpgpu_int.h  shaders.h
shaders/: chain_add_array_float.fs  chain_add_scalar_float.fs  chain_multiply_array_float.fs  chain_subtract_array_float.fs  chain_subtract_scalar_float.fs  fir_conv2d_float_5.fs  fir_conv2d_float_bbb_3.fs  mult_mat_float.fs  noop.fs  regular.vs
src/: gpgpu_gles.c  gpgpu_int.c  shaders.c
src/include/: gpgpu_int.h  shaders.h
